// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Availability render component 1`] = `
<div
  className="tribe-editor__tickets__availability"
/>
`;

exports[`Availability render component with available property 1`] = `
<div
  className="tribe-editor__tickets__availability"
>
  <span
    className="tribe-editor__numeric-label"
  >
    
    <span
      className="tribe-editor__numeric-label--count"
    >
      10
    </span>
    <span
      className="tribe-editor__numeric-label--after"
    >
       tickets available
    </span>
  </span>
</div>
`;

exports[`Availability renders component with available and total properties 1`] = `
<div
  className="tribe-editor__tickets__availability"
>
  <span
    className="tribe-editor__numeric-label"
  >
    
    <span
      className="tribe-editor__numeric-label--count"
    >
      1
    </span>
    <span
      className="tribe-editor__numeric-label--after"
    >
       ticket available
    </span>
  </span>
  <span
    className="tribe-editor__numeric-label"
  >
    
    <span
      className="tribe-editor__numeric-label--count"
    >
      20
    </span>
    <span
      className="tribe-editor__numeric-label--after"
    >
       total tickets
    </span>
  </span>
</div>
`;

exports[`Availability renders component with custom separator 1`] = `
<div
  className="tribe-editor__tickets__availability"
>
  <span
    className="tribe-editor__numeric-label"
  >
    
    <span
      className="tribe-editor__numeric-label--count"
    >
      2
    </span>
    <span
      className="tribe-editor__numeric-label--after"
    >
       tickets available
    </span>
  </span>
  <span
    className="tribe-editor__numeric-label"
  >
    
    <span
      className="tribe-editor__numeric-label--count"
    >
      20
    </span>
    <span
      className="tribe-editor__numeric-label--after"
    >
       total tickets
    </span>
  </span>
</div>
`;

exports[`Availability renders component with total property 1`] = `
<div
  className="tribe-editor__tickets__availability"
>
  <span
    className="tribe-editor__numeric-label"
  >
    
    <span
      className="tribe-editor__numeric-label--count"
    >
      20
    </span>
    <span
      className="tribe-editor__numeric-label--after"
    >
       total tickets
    </span>
  </span>
</div>
`;
